// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Asset Controls Component renders asset controls 1`] = `
<div
  id="UI-selected-asset-options"
>
  <span
    id="selected-asset-label"
  >
    <span
      className="selected-asset-label-title"
    >
      Currently selected: 
      Bed-1
    </span>
  </span>
  <div>
    <button
      id="confirm"
      onClick={[Function]}
    >
      <svg
        enable-background="new 0 0 125 125"
        height="55px"
        version="1.1"
        viewBox="0 0 125 125"
        width="55px"
        x="0px"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <g
          id="Layer_9"
        >
          <polygon
            fill="#DC7627"
            points="119,33.2 100.4,14.7 45,70.2 23.5,48.7  5,67.2 26.4,88.7 26.4,88.7 45,107.2 45,107.2 45,107.2 63.5,88.7 63.5,88.7"
            stroke="#000000"
            stroke-miterlimit="10"
            strokeWidth="3"
          />
        </g>
      </svg>
    </button>
    <button
      id="rotate"
      onClick={[Function]}
    >
      <svg
        height="55px"
        version="1.1"
        viewBox="0 0 125 125"
        width="55px"
        x="0px"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <g
          id="Layer_2"
        >
          <path
            d="M69.8,10.4v21.3c16.8,0.4,30.3,14.1,30.3,31c0,17.1-13.9,31-31,31c-16.6,0-30.2-13.1-31-29.6h13.1L27.5,32.9L3.8,64.2h13.2c0.9,28,23.8,50.4,52,50.4c28.8,0,52.1-23.3,52.1-52.1C121.2,34,98.2,10.8,69.8,10.4z"
            fill="#DC7627"
            stroke="#000000"
            stroke-miterlimit="10"
            strokeWidth="3"
          />
        </g>
      </svg>
    </button>
    <button
      id="remove"
      onClick={[Function]}
    >
      <svg
        height="55px"
        version="1.1"
        viewBox="0 0 125 125"
        width="55px"
        x="0px"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <g
          class="svg-icon"
          id="Layer_5"
        >
          <path
            d="M82.5,18.8H42.5c-2.8,0-5-2.3-5-5V8c0-2.8,2.3-5,5-5h39.9c2.8,0,5,2.3,5,5v5.8C87.5,16.6,85.2,18.8,82.5,18.8z"
            fill="none"
            stroke="#000000"
            stroke-miterlimit="10"
            strokeWidth="3"
          />
          <path
            d="M96.5,120H28.5c-4.2,0-7.6-3.4-7.6-7.6V19c0-4.2,3.4-7.6,7.6-7.6h68.1c4.2,0,7.6,3.4,7.6,7.6v93.4C104.2,116.6,100.7,120,96.5,120z"
            fill="#DC7627"
            stroke="#000000"
            stroke-miterlimit="10"
            strokeWidth="3"
          />
          <rect
            fill="#DC7627"
            height="19"
            stroke="#000000"
            stroke-miterlimit="10"
            strokeWidth="3"
            width="100.6"
            x="12.2"
            y="9.3"
          />
          <rect
            fill="none"
            height="77"
            stroke="#000000"
            stroke-miterlimit="10"
            strokeWidth="3"
            width="9.7"
            x="33.5"
            y="35"
          />
          <rect
            fill="none"
            height="77"
            stroke="#000000"
            stroke-miterlimit="10"
            strokeWidth="3"
            width="9.7"
            x="57.7"
            y="35"
          />
          <rect
            fill="none"
            height="77"
            stroke="#000000"
            stroke-miterlimit="10"
            strokeWidth="3"
            width="9.7"
            x="81.8"
            y="35"
          />
        </g>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Asset Controls Component renders asset controls 2`] = `
<div
  id="UI-selected-asset-options"
>
  <span
    id="selected-asset-label"
  >
    <span
      className="selected-asset-label-title"
    >
      Currently selected: 
      Bed-1
    </span>
  </span>
  <button
    id="deselect"
    onClick={[Function]}
  >
    <svg
      enable-background="new 0 0 125 125"
      height="55px"
      version="1.1"
      viewBox="0 0 125 125"
      width="55px"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g
        id="Layer_8"
      >
        <path
          d="M62.5,7.2C31.9,7.2,7.2,31.9,7.2,62.5s24.8,55.3,55.3,55.3s55.3-24.8,55.3-55.3S93.1,7.2,62.5,7.2z M62.5,26.7c5.2,0,10.1,1.1,14.6,3.1L29.8,77.1c-2-4.5-3.1-9.4-3.1-14.6C26.7,42.7,42.7,26.7,62.5,26.7z M62.5,98.3c-5.2,0-10.1-1.1-14.6-3.1l47.3-47.3c2,4.5,3.1,9.4,3.1,14.6C98.3,82.3,82.3,98.3,62.5,98.3z"
          fill="#DC7627"
          stroke="#000000"
          stroke-miterlimit="10"
          strokeWidth="3"
        />
      </g>
    </svg>
  </button>
</div>
`;
